<resources>
    <string name="app_name">MaterialDesign</string>
    <string name="msj_empty_text">Ingrese Valor</string>
    <string name="chx_atm">Cajero</string>
    <string name="cbx_bag">Bolsa</string>
    <string name="cbx_basket">Canasta</string>
    <string name="cbx_box">Caja</string>
    <string name="cbx_briefcase">Maletin</string>
    <string name="cbx_calculator">Calculadora</string>
    <string-array name="selected_options">
        <item>Cajero</item>
        <item>Bolsa</item>
        <item>Canasta</item>
        <item>Caja</item>
        <item>Maletin</item>
        <item>Calculadora</item>
    </string-array>
    <string name="title_activity_recycler">RecyclerActivity</string>
    <string name="title_activity_tarea_recycler">TareaRecyclerActivity</string>
</resources>
