<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_image_opt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hame.materialdesign.ImageOPTActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:text="@string/chx_atm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbx_atm"
                android:layout_weight="1"
                android:checked="true" />

            <CheckBox
                android:text="@string/cbx_bag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbx_bag"
                android:layout_weight="1"
                android:checked="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:text="@string/cbx_basket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbx_basket"
                android:layout_weight="1"
                android:checked="true" />

            <CheckBox
                android:text="@string/cbx_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbx_box"
                android:layout_weight="1"
                android:checked="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:text="@string/cbx_briefcase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbx_briefcase"
                android:layout_weight="1"
                android:checked="true" />

            <CheckBox
                android:text="@string/cbx_calculator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbx_calculator"
                android:layout_weight="1"
                android:checked="true" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_bag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/div01"
                android:layout_toRightOf="@+id/div01"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/thumbnail_bag" />

            <ImageView
                android:id="@+id/iv_atm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/div01"
                android:layout_toStartOf="@+id/div01"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/thumbnail_atm" />

            <TextView
                android:id="@+id/div01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/div02"
                android:layout_toRightOf="@+id/div02"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/thumbnail_box" />

            <ImageView
                android:id="@+id/iv_basket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/div02"
                android:layout_toStartOf="@+id/div02"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/thumbnail_basket" />

            <TextView
                android:id="@+id/div02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/iv_bag"
            android:layout_alignParentStart="true">

            <ImageView
                android:id="@+id/iv_calculator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/div03"
                android:layout_toRightOf="@+id/div03"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/thumbnail_calculator" />

            <ImageView
                android:id="@+id/iv_briefcase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/div03"
                android:layout_toStartOf="@+id/div03"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/thumbnail_briefcase" />

            <TextView
                android:id="@+id/div03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
        </RelativeLayout>


    </LinearLayout>
    </ScrollView>
</LinearLayout>
